--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -162,41 +162,6 @@
   gap: 8px;
 }
 
-/* === 间距类 (支持 px 为单位，可扩展) === */
-.m-0 {
-  margin: 0;
-}
-.mt-4 {
-  margin-top: 4px;
-}
-.mb-4 {
-  margin-bottom: 4px;
-}
-.ml-4 {
-  margin-left: 4px;
-}
-.mr-4 {
-  margin-right: 4px;
-}
-
-.p-0 {
-  padding: 0;
-}
-.p-4 {
-  padding: 4px;
-}
-.pt-4 {
-  padding-top: 4px;
-}
-.pb-4 {
-  padding-bottom: 4px;
-}
-.pl-4 {
-  padding-left: 4px;
-}
-.pr-4 {
-  padding-right: 4px;
-}
 /* === 文本相关 === */
 .text-left {
   text-align: left;
@@ -206,6 +171,12 @@
 }
 .text-right {
   text-align: right;
+}
+.font-12px {
+  font-size: 12px;
+}
+.font-14px {
+  font-size: 14px;
 }
 .font-bold {
   font-weight: bold;
@@ -320,14 +291,14 @@
 }
 
 /* 单行文本超出省略号 */
-.truncate {
+.ellipsis {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 /* 2 行 */
-.line-clamp-2 {
+.ellipsis-2 {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -335,7 +306,7 @@
 }
 
 /* 3 行 */
-.line-clamp-3 {
+.ellipsis-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
@@ -343,7 +314,7 @@
 }
 
 /* 可自定义更多行 */
-.line-clamp-4 {
+.ellipsis-4 {
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
